Verification tag added to head

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -34,6 +34,8 @@
       href="https://cdn.auth0.com/js/auth0-samples-theme/1.0/css/auth0-theme.min.css"
     />
 
+    <meta name="google-site-verification" content="rTLcAsSncwM2o2Rh-IfqDO3ls8jOg-HWvntwVpxNlMo" />
+    
     <title>Sentinel</title>
   </head>
   <body class="h-100">
